# monocular-slam

./: .gitignore  CMakeLists.txt  TODO  dataset.url
cmake/: FindEigen.cmake  config.cmake
include/sdvo/: cvmat_to_rgbdpyramid.h  depth_hypothesis.h  depth_ma_fusionner.h  depth_map_regulariser.h  epipolar_matcher.h  file_stream_input_image.h  image_depth_initializer.h  image_input.h  initializer.h  logger.h  ssd_subpixel_matcher_over_line.h
script/matlab/: dcm2quat.m  extract_log_ground_truth_format.m  extract_pos_from_algo.m  extract_timestamp.m  populate_workspace.m  quat2dcm.m  relative_trans_quat_from_first_to_second.m
script/tools/: convert_dataset.sh
src/: CMakeLists.txt  epipolar_matcher.cpp  epipolar_matcher.h
src/sdvo/: CMakeLists.txt  depth_hypothesis.cpp  depth_ma_fusionner.cpp  depth_map_regulariser.cpp  epipolar_matcher.cpp  file_stream_input_image.cpp  image_depth_initializer.cpp  ssd_subpixel_matcher_over_line.cpp
src/sdvo/test/: CMakeLists.txt  depth_map_fusionner_test.cpp  depth_map_regulariser_test.cpp  file_stream_input_image.cpp  opencv_point_test.cpp  ssd_subpixel_matcher_over_line_test.cpp
src/sdvo_viewer/: CMakeLists.txt  config_handler.cpp  config_handler.h
src/sdvo_viewer/test/: CMakeLists.txt  config_handler_test.cpp
src/test/: CMakeLists.txt  depth_ma_fusionner.cpp  depth_ma_fusionner.h  epipolar_matcher_test.cpp  tracker.cpp
src/tools/: CMakeLists.txt  convert_dataset.cpp
